Footer Text Align Fixed

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -36,7 +36,9 @@
 
     color: #333333;
 
-    text-align: center;
+    @media screen and (max-width: 768px) {
+      text-align: center;
+    }
   }
 
   & > .content {
